CA-16: CKEditor widget now no longer sits too far to the right; added a width on field containers so that long CKEditor help text no longer forces it out of place

--- a/client_admin/static/client_admin/sass/screen.sass
+++ b/client_admin/static/client_admin/sass/screen.sass
@@ -1376,6 +1376,7 @@ fieldset.module, div.inline-group
       +label()
       word-break: break-all
     div.field_container
+      width: 655px
       float: left
       +legacy-pie-clearfix
       &:first-child
@@ -1553,6 +1554,9 @@ fieldset.module, div.inline-group
 
       // CKEditor Positioning
       //  - - - - - - - - - - - - - - -
+      div.cke
+        margin-left: 0 !important
+
       span.cke_skin_kama
         margin-left: 0 !important
 
